<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>es.ull.iis.simulation</groupId>
  <artifactId>utils</artifactId>
  <version>2.0.0</version>
  <name>Utilities</name>
  <description>Different utilities for the simulation library</description>
  <dependencies>
  	<dependency>
	    <groupId>org.apache.poi</groupId>
	    <artifactId>poi</artifactId>
	    <version>3.0.2-FINAL</version>
  	</dependency>
	<dependency>
		<groupId>com.zenuevo.simkit</groupId>
		<artifactId>simkit</artifactId>
		<version>1.4.1</version>
	</dependency>
<!--  	<dependency>
  		<groupId>simkit</groupId>
  		<artifactId>simkit</artifactId>
  		<version>1.4.4</version>
  		<scope>system</scope>
  		<systemPath>${project.basedir}/lib/simkit.jar</systemPath>
  	</dependency>-->
	<dependency>
    	<groupId>net.sourceforge.owlapi</groupId>
    	<artifactId>owlapi-distribution</artifactId>
    	<version>5.5.0</version>
	</dependency>	  	
  </dependencies>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.9</source>
          <target>1.9</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>